# DataToWord

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test.json
.github/workflows/: python-app.yml
data_to_word/: data_to_word.py
datatoword/: __init__.py  conftest.py  datatoword.py  tests.py
datatoword/loaders/: __init__.py  csv.py  factory.py  json.py  tests.py
loader/: __init__.py  factory.py  loader.py
loaders/: __init__.py  json.py  tests.py
